correct z-indexing

--- a/_sass/hidiot.scss
+++ b/_sass/hidiot.scss
@@ -19,3 +19,5 @@ ul, li {
 .blog_masthead { background: url(/assets/images/blog/masthead.jpg) 50% 0 fixed; background-size:cover; }
 
 p.blackoutlined,h1.blackoutlined,h2.blackoutlined,h3.blackoutlined,h4.blackoutlined,h5.blackoutlined,h6.blackoutlined,a.blackoutlined,i.blackoutlined,span.blackoutlined, input[type="text"].blackoutlined, textarea.blackoutlined, input[type="submit"].blackoutlined, select.blackoutlined{ color:#ffffff; text-shadow:-1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
+
+div.tuck-over { position: relative; z-index: 2;}
